test: add integration tests and exception scenarios; refactor and clean up old code